# wp-json-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  Report.py  WPJsonScraper.py  ngg_scraper.py  pyproject.toml
.github/: dependabot.yml
doc/: Interactive.md
lib/: console.py  exceptions.py  exporter.py  infodisplayer.py  interactive.py  requestsession.py  utils.py  wpapi.py
lib/plugins/: plugin_list.csv
